# integer

./: integer.cabal
src/: Integer.hs  Pre.hs  Prelude.hs  Word.hs  Z.hs  ℤ.hs
src/Big/: N.hs
src/Big/N/: Bit.hs
